# replay-buffer-pro

./: .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  buildspec.json  priority-issues.md
.claude/: launch.json
.claude/rules/: keep-docs-updated.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/build-plugin/: action.yaml
.github/actions/package-plugin/: action.yaml
.github/scripts/: Build-Windows.ps1  Package-Windows.ps1  build-macos  build-ubuntu
.github/scripts/utils.zsh/: set_loglevel  setup_ubuntu
.github/workflows/: build-project.yaml  macos.yml  pr-pull.yaml  push.yaml
cmake/common/: bootstrap.cmake  buildspec_common.cmake  compiler_common.cmake
cmake/macos/: buildspec.cmake
data/locale/: en-US.ini
docs/: README.md  index.html  llms.txt  robots.txt  script.js  sitemap.xml  styles.css
docs/architecture/: build-and-localization.md  replay-buffer-flow.md  settings-and-hotkeys.md  ui-layer.md  utilities.md
docs/scripts/: download-split.js  index.js  install-tabs.js  plugin-ui-demo.js  utils.js
pages/: index.html  llms.txt
pages/scripts/: index.js
reference/: README.md
reference/architecture/: build-and-localization.md  module-and-obs-integration.md  settings-and-hotkeys.md  utilities.md
src/: config.hpp  dock-state-manager.cpp  dock-state-manager.hpp  logger.hpp  main.cpp  obs-utils.cpp  obs-utils.hpp  plugin-main.cpp  plugin.cpp  plugin.hpp  replay-buffer-manager.cpp  replay-buffer-manager.hpp  replay_buffer_pro.cpp  replay_buffer_pro.hpp  settings-manager.cpp  settings-manager.hpp  ui-components.cpp  ui-components.hpp
src/config/: config.hpp
src/managers/: dock-state-manager.cpp  hotkey-manager.cpp  hotkey-manager.hpp  replay-buffer-manager.cpp  replay-buffer-manager.hpp  save-button-settings.cpp  save-button-settings.hpp  settings-manager.cpp  settings-manager.hpp
src/plugin/: plugin.cpp  plugin.hpp
src/ui/: ui-components.cpp  ui-components.hpp
src/utils/: duration-format.cpp  duration-format.hpp  logger.hpp  obs-utils.cpp  obs-utils.hpp  video-trimmer.cpp  video-trimmer.hpp
